[package]
name = "climm"
version = "0.1.0"
authors = ["kai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "*"
dirs = "*"
toml = "*"
serde = "*"
serde_derive = "*"
thiserror = "*"
zip = "*"
indexmap.version = "*"
indexmap.features = ["serde-1"]
walkdir = "*"
